--- a/PaginaMedidor/index.html
+++ b/PaginaMedidor/index.html
@@ -84,7 +84,7 @@
     </div>
   </nav>
 
-  <div id="index-banner" class="parallax-container">
+  <div id="index-banner" >
     <div>
       <div class="col-xs-12">
         <video width="300" height="150" style="width: 100%; height: auto;" id="videoBanner" class="center-block" playsinline="" autoplay="autoplay" preload="metadata" loop="loop">
@@ -92,7 +92,7 @@
 			    <source src="https://www.mirubee.com/img/promo-home.webm"  type="video/webm">
        </video>
        
-       <br> </br>
+      <br>
       </div>
     </div>  
   </div>
