--- a/PaginaMedidor/index.html
+++ b/PaginaMedidor/index.html
@@ -54,7 +54,7 @@
     <div class="nav-wrapper">
       <a href="#!" class="brand-logo"> 
 
-          <img id="img4" src="Imagenes/eurekLogo.png"  alt="">
+          <img id="img4" src="assets/eurekLogo.png"  alt="">
 
       </a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
