Cambio de paralax

--- a/PaginaMedidor/index.html
+++ b/PaginaMedidor/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
   <!-- CSS  -->
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -148,8 +149,9 @@
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
-        <div class="row center">
-          <h3 class="header col s12 light">A modern responsive front-end framework based on Material Design</h3>
+        <div class="row center w3-text-black">
+          <h3 class="header col s12 light">Información sobre las diferentes tarifas existentes entre el coste de la luz en el horario diurno y el nocturno
+          </h3>
         </div>
       </div>
     </div>
