commit Login y dasboard usuario 🔋📡🕯️

--- a/PaginaMedidor/index.html
+++ b/PaginaMedidor/index.html
@@ -52,7 +52,7 @@
 <body>
   
   <nav>
-    <div class="nav-wrapper">
+    <div class="nav-wrapper navcolor">
       <a href="#!" class="brand-logo"> 
 
           <img id="img4" src="assets/eurekLogo.png"  alt="">
