Commit dashboard usuario (y)

--- a/PaginaMedidor/Login/index.html
+++ b/PaginaMedidor/Login/index.html
@@ -31,7 +31,7 @@
         <div style="margin:15px 0;"><em class="zmdi zmdi-account-circle zmdi-hc-5x"> <img src="../assets/eurekLogo.png" alt="Logo" width="200"></em> 
           <p>Inicia sesión con tu cuenta</p>   
         </div>
-        <form action="../apiGps.html" onsubmit="return validacion();">
+        <form action="../Dasboard.html" onsubmit="return validacion();">
             <div class="input-field">
               <input id="UserName" type="text" class="validate">
                 <label for="UserName"><i class="zmdi zmdi-account"></i>&nbsp; Nombre</label>
