--- a/PaginaMedidor/Dasboard.html
+++ b/PaginaMedidor/Dasboard.html
@@ -81,7 +81,7 @@
                             <div class="sidebar-submenu">
                                 <ul>
                                     <li>
-                                        <a href="mapaGPS.html">GPS MAPA 1
+                                        <a href="Dasboard.html">GPS MAPA 1
                                             <span class="badge badge-pill badge-success">Pro</span>
                                         </a>
                                     </li>
@@ -346,9 +346,11 @@
                 <div class="row">
                     
                     <div class="form-group col-md-12">
-                        <h2>Sidebar template</h2>
-                        <p>This is a responsive sidebar template with dropdown menu based on bootstrap 4 framework.</p>
-
+                        <div id="mapHere" align="center">
+                            <iframe src="mediciones.html"  
+                      marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0"  
+                      frameborder="0" width="100%" height="600px"> 
+                      </iframe> 
                     </div>
                 </div>
                 <hr>
@@ -415,7 +417,7 @@
     <script src="assets/js/custom.js"></script>
 
    
-  
+   
 </body>
 
 </html>
