--- a/PaginaMedidor/index.html
+++ b/PaginaMedidor/index.html
@@ -53,15 +53,15 @@
   
   <nav>
     <div class="nav-wrapper navcolor">
-      <a href="#!" class="brand-logo"> 
+      <a href="index.html" class="brand-logo"> 
 
           <img id="img4" src="assets/eurekLogo.png"  alt="">
 
       </a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="index2.html">¿Quiénes Somos?</a></li>
         <li><a href="collapsible.html">Javascript</a></li>
         <li><a href="mobile.html">Mobile</a></li>
       </ul>
