--- a/PaginaMedidor/index.html
+++ b/PaginaMedidor/index.html
@@ -110,7 +110,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
               <h5 class="center">Datos en Tiempo Real</h5>
-              <p class="justi" class="light">Visualice y gestione toda la información del consumo eléctrico de tu casa a través de una plataforma vitual, simple y facil de usar. Donde usted encontrará graficas que le ayudaran a planficar un ahorro a largo plazo</p>
+              <p class="justi light">Visualice y gestione toda la información del consumo eléctrico de tu casa a través de una plataforma vitual, simple y facil de usar. Donde usted encontrará graficas que le ayudaran a planficar un ahorro a largo plazo</p>
           </div>
         </div>
 
@@ -118,7 +118,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">cloud</i></h2>
               <h5 class="center">Integracion de Tecnologías</h5>
-              <p class="justi" class="light">
+              <p class="justi light">
                 El internet de las cosas "IoT" esta creciendo globalmente porque cada vez existen 
                 más dispositivos interconectados a la Internet, esto permite que se puedan recolectar
                 datos del consumo eléctrico y realizar el proceso de encendido o apagado. Ademas de 
@@ -130,8 +130,12 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-             <h5 class="center">Recomendaciones</h5>
-              <p class="justi" class="light">Brindamos asesorías </p>
+             <h5 class="center">Características principales</h5>
+               <p class="justi light">
+                 1) Encender o apagar a distancia los electrodomésticos a través de tu móvil. <br>
+                 2) Controlar al mismo tiempo grupo de electrodomésticos.<br>
+                 3) Revisar el consumo de electricidad en tiempo real e histórico en vatios y, además, el gasto de electricidad.<br>
+                 4) Configurar temporizadores para encender y apagar los dispositivos automáticamente. </p>
           </div>
         </div>
 
@@ -140,16 +144,18 @@
   </div>
 
   <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center w3-text-black">
-          <h3 class="header col s12 light">Información sobre las diferentes tarifas existentes entre el coste de la luz en el horario diurno y el nocturno
-          </h3>
+      <div class="section no-pad-bot">
+        <div class="container w3-myfont">
+          <div class="row center w3-text-black">
+            <h2>Conectado a Internet:</h2> 
+            <h3 class="header col s12 light">
+                Consulta desde cualquier sitio y en cualquier hora toda la información de tu consumo eléctrico
+            </h3>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="parallax"><img src="assets/background2.jpg" alt="Unsplashed background img 2" ></div>
-  </div> 
+      <div class="parallax"><img src="assets/background2.jpg" alt="Unsplashed background img 3" ></div>
+  </div>
 
   <div class="container">
     <div class="section">
@@ -159,7 +165,7 @@
             <div class="icon-block">
               <h2 class="center brown-text"><i class="material-icons">phone</i></h2>
                 <h5 class="center">Contáctanos</h5>
-                <p class= "light left-align ceter">No dudes en contactarnos brindamos asesoría, estudio de factibilidad sobre el consumo energético. Envianos tus datos y te responderemos en los mas rápido posible </p>
+                <p class= "light left-align center">No dudes en contactarnos brindamos asesoría, estudio de factibilidad sobre el consumo energético. Envianos tus datos y te responderemos en los mas rápido posible </p>
             </div>
         </div>
 
@@ -208,37 +214,42 @@
 
       </div>
 
-
-
     </div>
   </div>
 
+  <div id="mapHere" align="center">
+      <div style="width: 100%"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63778.38780089678!2d-76.6349535309467!3d2.4573844915564806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e300311c028d47d%3A0x880bd67f0987a54e!2zUG9wYXnDoW4sIENhdWNh!5e0!3m2!1ses!2sco!4v1538425574677" width="100%" height="600px" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+    </div>
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
-      <div class="container">
+      <div class="container w3-myfont">
         <div class="row center w3-text-black">
-          <h3 class="header col s12 light">
-              Ahorro de energetico, Alerta de consumo y precios durante el último mes
-              A modern responsive front-end framework based on Material Design</h3>
+          <h2>Actúa y Ahorra:</h2> 
+          <h3 class="header col s12 light">Ahorro de energetico, Alerta de consumo y precios durante el último mes</h3>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="assets/background3.jpg" alt="Unsplashed background img 3" ></div>
+    <div class="parallax"><img src="https://mirubee.com/img/work-smarter.jpg" class="img-responsive center-block" alt="Atributo 1"></div>
   </div>
 
   <footer class="page-footer teal">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <h5 class="white-text">Sobre nosotros</h5>
+          <p class="grey-text text-lighten-4">Somos un grupo de estudiantes de ingenieria electrónica, aparte de esos somos jovenes emprendedores
+            que se dedican al desarrollo de software y hardware para brindar soluciones tecnologicas eficientes. Con conocimientos en internet de
+            las cosas (IoT), Frontend y backend. 
+
+          </p>
 
 
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Settings</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="#!">eiso</a></li>
             <li><a class="white-text" href="#!">Link 2</a></li>
             <li><a class="white-text" href="#!">Link 3</a></li>
             <li><a class="white-text" href="#!">Link 4</a></li>
@@ -247,17 +258,17 @@
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="#!">Jeison Ruiz</a></li>
+            <li><a class="white-text" href="#!">Cristian Palta</a></li>
+            <li><a class="white-text" href="#!">Sebastian Peña</a></li>
+            <li><a class="white-text" href="#!">Daniel Collazos</a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Echo por <a class="brown-text text-lighten-3" href="http://materializecss.com">Eureka! Technology </a>
+      Echo por <a class="brown-text text-lighten-3" href="http://materializecss.com" size =  >Materialize - Desarrollado por Eureka! Technology</a>
       </div>
     </div>
   </footer>
