--- a/PaginaMedidor/about/about.html
+++ b/PaginaMedidor/about/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>RanGO - About</title>
+<title>SIMEE - Quienes Somos</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="RanGO Project">
@@ -70,173 +70,53 @@
 	<div class="icon_boxes">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-4">
+				<div class="col-lg-6">
 					<div class="icon_box_title">
-						<h1>A strong team with a strong background</h1>
-					</div>
-					<div class="button icon_box_button trans_200">
-						<a href="#" class="trans_200">discover more</a>
+						<h1>Misión</h1>
 					</div>
 				</div>
 
-				<div class="col-lg-4 icon_box_col">
-
+				<div class="col-lg-6 icon_box_col">
 					<!-- Icon Box Item -->
 					<div class="icon_box_paragraph">
-						<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae enim enim. Sed nec dignissim purus. Praesent bibendum tristique nulla, quis fringilla mauris sagittis ut. Maecenas sit amet varius nulla. Praesent faucibus ipsum.</p>
+						<p class="justi">Desarrollar soluciones tecnológicas basadas en tecnologías open source de la industria 4.0 para contribuir
+							con el desarrollo tecnológico y social de nuestro país brindando mayor accesibilidad y oportunidades al
+							talento tecnológico local.
+							Además de esto pretendemos poder contribuir con el mejoramiento de la calidad de vida de personas con
+							discapacidad de miembro inferior/superior mediante la impresión 3D aparte de desarrollar hardware y
+							software de alta calidad.
+						</p>
 					</div>
-
-				</div>
-
-				<div class="col-lg-4 icon_box_col">
-
-					<!-- Icon Box Item -->
-					<div class="icon_box_paragraph">
-						<p>Si non ligula sodales vestibulum. Nam nec augue a leo ullamcorper sollicitudin. Suspendisse mattis malesuada tortor sit amet accumsan. Mauris eu elit quis enim pretium finibus. Integer tempor, augue et lacinia cursus, nisl elit elementum magna, non blandit nisi ipsum vitae nulla. </p>
-					</div>
-					
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<!-- Vertical Slider Section -->
-
-	<div class="v_slider_section">
-		<div class="container fill_height">
-			<div class="row fill_height">
-
-				<div class="col-lg-6 v_slider_section_image">
-					<div class="v_slider_image">
-						<img src="images/testimonials.jpg" alt="">
+	<div class="icon_boxes">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6">
+					<div class="icon_box_title">
+						<h1>Visión</h1>
 					</div>
 				</div>
-
-				<div class="col-lg-5 offset-lg-1 v_slider_content d-flex flex-column justify-content-center">
-					
-					<!-- Testimonials Slider -->
-					<div class="v_slider_title">
-						<h1>What clients say</h1>
-					</div>
-
-					<div class="v_slider_container">
-
-						<!-- Vertical Slider -->
-						<div class="v_slider">
-
-							<!-- Vertical Slider Item -->
-							<div class="v_slider_item">
-								<span>“</span>
-								<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pelle ntesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut. Etiam nec odio vestibulum est mattis effic iturut magna. Pelle ntesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut.</p>
-								<div class="person d-flex flex-row">
-									<div class="person_image">
-										<img src="images/person_1.png" alt="">
-									</div>
-									<div class="person_meta">
-										<div class="person_name">Michael Smith</div>
-										<div class="person_title">Manager</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- Vertical Slider Item -->
-							<div class="v_slider_item">
-								<span>“</span>
-								<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pelle ntesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut. Etiam nec odio vestibulum est mattis effic iturut magna. Pelle ntesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut.</p>
-								<div class="person d-flex flex-row">
-									<div class="person_image">
-										<img src="images/person_1.png" alt="">
-									</div>
-									<div class="person_meta">
-										<div class="person_name">Michael Smith</div>
-										<div class="person_title">Manager</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- Vertical Slider Item -->
-							<div class="v_slider_item">
-								<span>“</span>
-								<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pelle ntesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut. Etiam nec odio vestibulum est mattis effic iturut magna. Pelle ntesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut.</p>
-								<div class="person d-flex flex-row">
-									<div class="person_image">
-										<img src="images/person_1.png" alt="">
-									</div>
-									<div class="person_meta">
-										<div class="person_name">Michael Smith</div>
-										<div class="person_title">Manager</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- Vertical Slider Item -->
-							<div class="v_slider_item">
-								<span>“</span>
-								<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pelle ntesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut. Etiam nec odio vestibulum est mattis effic iturut magna. Pelle ntesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut.</p>
-								<div class="person d-flex flex-row">
-									<div class="person_image">
-										<img src="images/person_1.png" alt="">
-									</div>
-									<div class="person_meta">
-										<div class="person_name">Michael Smith</div>
-										<div class="person_title">Manager</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- Vertical Slider Item -->
-							<div class="v_slider_item">
-								<span>“</span>
-								<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pelle ntesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut. Etiam nec odio vestibulum est mattis effic iturut magna. Pelle ntesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut.</p>
-								<div class="person d-flex flex-row">
-									<div class="person_image">
-										<img src="images/person_1.png" alt="">
-									</div>
-									<div class="person_meta">
-										<div class="person_name">Michael Smith</div>
-										<div class="person_title">Manager</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- Vertical Slider Item -->
-							<div class="v_slider_item">
-								<span>“</span>
-								<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pelle ntesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut. Etiam nec odio vestibulum est mattis effic iturut magna. Pelle ntesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut.</p>
-								<div class="person d-flex flex-row">
-									<div class="person_image">
-										<img src="images/person_1.png" alt="">
-									</div>
-									<div class="person_meta">
-										<div class="person_name">Michael Smith</div>
-										<div class="person_title">Manager</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- Vertical Slider Item -->
-							<div class="v_slider_item">
-								<span>“</span>
-								<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pelle ntesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut. Etiam nec odio vestibulum est mattis effic iturut magna. Pelle ntesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut.</p>
-								<div class="person d-flex flex-row">
-									<div class="person_image">
-										<img src="images/person_1.png" alt="">
-									</div>
-									<div class="person_meta">
-										<div class="person_name">Michael Smith</div>
-										<div class="person_title">Manager</div>
-									</div>
-								</div>
-							</div>
-
-						</div>
+				<div class="col-lg-6 icon_box_col">
+					<!-- Icon Box Item -->
+					<div class="icon_box_paragraph">
+						<p class="justi">Nuestra visión es llegar a ser una empresa reconocida para el año 2022 nacionalmente en venta y/o
+								servicios de automatización e impresión 3D y nuestros objetivos radican en poder brindar soluciones
+								tecnológicas para el sector productivo del Cauca, desarrollar Hardware y Software hecho por mano de obra
+								nacional y brindar el servicio de impresión 3D para el desarrollo de prótesis más accesibles y uso general
+								de esta tecnología para desarrollo de productos u objetos personalizados, hechos a la medida y
+								necesidades de los clientes.
+						</p>
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</div>
-
+	
+	
 	<!-- Team -->
 
 	<div class="team">
