commit de salmqtt

--- a/PaginaMedidor/index.html
+++ b/PaginaMedidor/index.html
@@ -205,7 +205,13 @@
                 <div class="input-field col s6">
                     <i class="material-icons prefix">create</i>
                     <input id="icon_prefix" type="text" class="validate">
-                    <label for="icon_prefix">Escribenos tu inquietud ....</label>
+                    <label for="icon_prefix">Escribenos tu consulta ....</label>
+                </div>
+
+                <div class= "center">
+                  <button class="btn waves-effect waves-light" type="submit" name="action" size="40px">Enviar
+                    <i class="material-icons right">send</i>
+                  </button>
                 </div>
 
               
@@ -224,7 +230,7 @@
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container w3-myfont">
-        <div class="row center w3-text-black">
+        <div class="row center">
           <h2 id="colorcito">Actúa y Ahorra:</h2> 
           <h3 id="colorcito" class="header col s12 light ">Ahorro de energetico, Alerta de consumo y precios durante el último mes</h3>
         </div>
@@ -247,21 +253,21 @@
 
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Opciones</h5>
+          <h5 class="white-text">Recursos</h5>
           <ul>
-            <li><a class="white-text" href="#!">eiso</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="#!">FAQs</a></li>
+            <li><a class="white-text" href="#!">API</a></li>
+            <li><a class="white-text" href="#!">Aviso Legal</a></li>
+            <li><a class="white-text" href="#!">Cookies</a></li>
           </ul>
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Talento Humano</h5>
+          <h5 class="white-text">Sobre nosotros</h5>
           <ul>
-            <li><a class="white-text" href="#!">Jeison Ruiz</a></li>
-            <li><a class="white-text" href="#!">Cristian Palta</a></li>
-            <li><a class="white-text" href="#!">Sebastian Peña</a></li>
-            <li><a class="white-text" href="#!">Daniel Collazos</a></li>
+            <li><a class="white-text" href="#!">Sobre nosotros</a></li>
+            <li><a class="white-text" href="#!">Contacto</a></li>
+            <li><a class="white-text" href="#!">Soluciones corporativas</a></li>
+            <li><a class="white-text" href="#!">Compañia electricas</a></li>
           </ul>
         </div>
       </div>
