--- a/PaginaMedidor/about/about.html
+++ b/PaginaMedidor/about/about.html
@@ -30,6 +30,53 @@
 <!--Import materialize.css-->
 <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
 
+
+
+<!-- CSS  -->
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+<link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+<script type="text/javascript" src="jquery.visible.js"></script>
+
+<!-- Compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	
+<!--Import Google Icon Font-->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!--Import materialize.css-->
+<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+<script type="text/javascript" src="jquery.visible.js"></script>
+<!-- Compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  
+<!--Import Google Icon Font-->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!--Import materialize.css-->
+<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+
+
+
 </head>
 
 <body>
@@ -291,7 +338,23 @@
 		</div>
 	</div>
 
+
 </div>
+
+
+
+   <!-- data-position can be : bottom, top, left, or right -->
+  <!-- data-tooltip defines the tooltip text -->
+        
+  <div class="fixed-action-btn" >
+    <a href="../index.html" class="btn-floating btn-large green btn tooltipped" data-position="left" data-tooltip="Usuario">
+      <i href="../index.html" class="large material-icons">face</i>
+    </a>
+    <ul>
+      <li><a class="btn-floating red tooltipped" data-position="left" data-tooltip="Registrate"><i class="material-icons">publish</i></a></li>
+      <li><a  href="Login/index.html" class="btn-floating blue tooltipped" data-position="left" data-tooltip="Iniciar Sesion"><i class="material-icons">how_to_reg</i></a></li>
+    </ul>
+  </div>
 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="styles/bootstrap4/popper.js"></script>
@@ -306,6 +369,15 @@
 <script src="plugins/scrollTo/jquery.scrollTo.min.js"></script>
 <script src="plugins/easing/easing.js"></script>
 <script src="js/about_custom.js"></script>
+
+
+<scrip src="botoncito2.js">
+
+ 
+   
+</scrip>
+<script type="text/javascript" src="js/materialize.min.js"></script>  
+
 </body>
 
 </html>
