--- a/PaginaMedidor/Dasboard.html
+++ b/PaginaMedidor/Dasboard.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Responsive sidebar template with sliding effect and dropdown menu based on bootstrap 3">
-    <title>Sidebar template</title>
+    <title>SIMEE - DASHBOARD</title>
       <link rel="stylesheet" type="text/css" href="styleMaterialize.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
@@ -33,7 +33,7 @@
         <nav id="sidebar" class="sidebar-wrapper">
             <div class="sidebar-content">
                 <div class="sidebar-brand">
-                    <a href="#">pro sidebar</a>
+                    <a href="#">Consulte su consumo energetico</a>
                     <div id="close-sidebar">
                         <i class="fas fa-times"></i>
                     </div>
@@ -43,10 +43,10 @@
                         <img class="img-responsive img-rounded" src="assets/img/user.jpg" alt="User picture">
                     </div>
                     <div class="user-info">
-                        <span class="user-name">Jeison
-                            <strong>Ruiz</strong>
+                        <span class="user-name">User
+                            <strong>Name</strong>
                         </span>
-                        <span class="user-role">Administrator</span>
+                        <span class="user-role">Administrador</span>
                         <span class="user-status">
                             <i class="fa fa-circle"></i>
                             <span>Online</span>
@@ -76,7 +76,7 @@
                             <a href="#">
                                 <i class="fa fa-tachometer-alt"></i>
                                 <span>Dashboard</span>
-                                <span class="badge badge-pill badge-danger">New</span>
+                                <span class="badge badge-pill badge-danger">Crear Nuevo</span>
                             </a>
                             <div class="sidebar-submenu">
                                 <ul>
