--- a/PaginaMedidor/paginas/resumenMediciones.html
+++ b/PaginaMedidor/paginas/resumenMediciones.html
@@ -108,7 +108,7 @@
                                 <div class="sidebar-submenu">
                                     <ul>
                                         <li>
-                                            <a href="#">Fecha y hora
+                                            <a href="consultas.html">Fecha y hora
                                             </a>
                                         </li>
                                         
@@ -580,7 +580,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<script src='scriptGauge.js' type='text/javascript' >  </script>
+<script src='../scriptGauge.js' type='text/javascript' >  </script>
 
 <!-- librerias mediciones -->
 
