Ultimo commit medidor wifi

--- a/PaginaMedidor/Dasboard.html
+++ b/PaginaMedidor/Dasboard.html
@@ -108,7 +108,7 @@
                                 <div class="sidebar-submenu">
                                     <ul>
                                         <li>
-                                            <a href="#">Fecha y hora
+                                            <a href="paginas/consultas.html">Fecha y hora
                                             </a>
                                         </li>
                                         
