Commit Final medidor wifi

--- a/PaginaMedidor/Dasboard.html
+++ b/PaginaMedidor/Dasboard.html
@@ -85,12 +85,12 @@
                                 <div class="sidebar-submenu">
                                     <ul>
                                         <li>
-                                            <a href="../paginas/resumenMediciones.html">Mediciones
+                                            <a href="paginas/resumenMediciones.html">Mediciones
                                                 <span class="badge badge-pill badge-success">Tiempo Real</span>
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="graficas.html">Graficas
+                                            <a href="paginas/graficas.html">Graficas
                                                <span class="badge badge-pill badge-success">Tiempo Real</span>
                                             </a>
                                             
