--- a/PaginaMedidor/paginas/resumenMediciones.html
+++ b/PaginaMedidor/paginas/resumenMediciones.html
@@ -127,16 +127,16 @@
                                             <a href="#">Nevera</a>
                                         </li>
                                         <li>
-                                            <a href="#">Luces</a>
+                                            <a href="#">Iluminacion</a>
                                         </li>
                                         <li>
                                             <a href="#">Plancha</a>
                                         </li>
                                         <li>
-                                            <a href="#">Icons</a>
+                                            <a href="#">Lavadora</a>
                                         </li>
                                         <li>
-                                            <a href="#">Forms</a>
+                                            <a href="#">Otros</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -152,9 +152,7 @@
                                         <li>
                                             <a href="#">Google maps</a>
                                         </li>
-                                        <li>
-                                            <a href="#">Open street map</a>
-                                        </li>
+                                    
                                     </ul>
                                 </div>
                             </li>
